13124
When I try to compile the following file:
```scala
package com.sun.test

import java.util.Date
```

I get the error message
```scala
comsuntest.scala:3: error: Date is not a member of java.util
import java.util.Date
       ^
one error found
```

It should be possible to be able to write new code in com.sun packages, Sun employees do use Scala too :-)
